# first-setup

./: Justfile  README.md  distrobox.ini  images.json  meson.build  test.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
data/: meson.build  org.frostyard.FirstSetup.policy  org.tunaos.FirstSetup.desktop.in  org.tunaos.FirstSetup.policy  org.tunaos.FirstSetup.rules
data/icons/: meson.build
debian/: changelog  debhelper-build-stamp
po/: POTFILES  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  lt.po  meson.build  ml.po  ms.po  nb_NO.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  (+14 more)
snow_first_setup/: application.py  apps.json  core.json  images.json  meson.build  snow-first-setup.gresource.xml  style.css  window.py
snow_first_setup/core/: backend.py
snow_first_setup/gtk/: core-progress.ui  install-confirm.ui  install-disk.ui  install-done.ui  install-progress.ui  layout-applications.ui  user-home.ui  welcome-install.ui  window.ui
snow_first_setup/scripts/: enroll-key  install-old  install-to-disk  install-to-disk-manual  install_create_rootfs.sh  logout  meson.build  user
snow_first_setup/views/: applications.py  conn_check.py  core_progress.py  done.py  install_confirm.py  install_disk.py  install_done.py  install_progress.py  logout.py  meson.build  recovery_key.py  user_home.py  welcome_install.py
tunaos_first_gtk/gtk/: install-confirm.ui
tunaos_first_setup/: application.py  dialog.py  main.py  meson.build  tunaos-first-setup.gresource.xml  tunaos-first-setup.in  window.py
tunaos_first_setup/core/: backend.py  keyboard.py  languages.py  meson.build
tunaos_first_setup/gtk/: done.ui  install-confirm.ui  install-disk.ui  location.ui  recovery-key.ui  theme.ui  user.ui  welcome-install.ui  welcome-user.ui  welcome.ui
tunaos_first_setup/scripts/: dev-install  enroll-key  flatpak-system  install-to-disk  meson.build  oemcomplete  recovery-key  remove-autostart-file  remove-first-setup-user  setup-system  user
tunaos_first_setup/views/: applications.py  conn_check.py  core_progress.py  done.py  hostname.py  install_confirm.py  install_disk.py  install_done.py  install_progress.py  keyboard.py  language.py  locations.py  logout.py  meson.build  progress.py  recovery_key.py  theme.py  timezone.py  user.py  welcome.py  welcome_install.py  welcome_user.py
